--- a/iOSApp.json
+++ b/iOSApp.json
@@ -5870,7 +5870,7 @@
     "FFlagFixFlexLayoutNodeTests": true,
     "DFFlagPhoto2AvatarLogLongRunningJobs": true,
     "DFFlagMockCodecFixVideoMemory": true,
-    "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime": 1000,
+    "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime": 100,
     "FFlagAXFixDetailsButtonLabel": true,
     "FFlagSettingsHubCurrentPageSignal": true,
     "FFlagAXAdaptiveScrollingSnapItemEditor": true,
@@ -9205,7 +9205,6 @@
     "FFlagFixMediaGalleryOversized": true,
     "FFlagLuaAppContentMaturityFromEgs2": true,
     "FFlagAppChatHideToastsU13_2": true,
-    "FFlagAXItemDetailsAnalyticsV2": true,
     "FFlagEnableCoreScriptRuntime": true,
     "DFFlagBanningEnabledProp": true,
     "FFlagUseAccumulationStepperForMouseWheelScrollPicker": true,
@@ -9373,6 +9372,8 @@
     "FFlagUseSkyReadyState": true,
     "FFlagFixAltKeyInputUWP": true,
     "FFlagClientToastNotificationsEnabled2": true,
+    "FFlagCapturesHotkeyEnabledForAll_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-07T17:54:25",
+    "FFlagShowUpdatedScreenshotHotkey_v2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-07T17:56:31",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10033,14 +10034,16 @@
     "FFlagCevIdleTimeoutTelemetry": true,
     "DFIntCevIdleTimeoutTelemetryThrottleHundredthsPercent": 10000,
     "FFlagLuaAppAlignGameGridTable": true,
-    "FFlagCEVFlowStart_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:06:45",
-    "FFlagCEVFlowStartPartyBegin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:07:27",
     "FFlagPCSCEVFeasibieAnalytics": true,
-    "FFlagDragDetectorRestartAfterPermissionChangeFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:28:25",
     "DFIntCEVLowMemoryWarningTelemetryThrottleHundredthsPercent": 10000,
     "FFlagCEVLowMemoryWarningAnalytics": true,
-    "FStringFlagRepoGitHashFastString": "d37f76f86554dca5634b2ae69818230b3841a513",
-    "DFStringFlagRepoGitHashDynamicString": "d37f76f86554dca5634b2ae69818230b3841a513",
-    "FStringFlipTimeStampFastString": "2025-01-06T22:56:49.320Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-06T22:56:49.320Z"
+    "FFlagCEVFlowStart": true,
+    "FFlagCEVFlowStartPartyBegin": true,
+    "FFlagDragDetectorRestartAfterPermissionChangeFix": true,
+    "FFlagFixShowMusicFtuxTooltipWithoutConnect": true,
+    "FFlagAXNewItemGroupIncrementalHydration2": true,
+    "FStringFlagRepoGitHashFastString": "b27997139f0c7e4e66ee9a2fb7a2eb968ae2914d",
+    "DFStringFlagRepoGitHashDynamicString": "b27997139f0c7e4e66ee9a2fb7a2eb968ae2914d",
+    "FStringFlipTimeStampFastString": "2025-01-07T17:57:15.327Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-07T17:57:15.327Z"
 }
