--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -5870,7 +5870,7 @@
     "FFlagFixFlexLayoutNodeTests": true,
     "DFFlagPhoto2AvatarLogLongRunningJobs": true,
     "DFFlagMockCodecFixVideoMemory": true,
-    "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime": 1000,
+    "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime": 100,
     "FFlagAXFixDetailsButtonLabel": true,
     "FFlagSettingsHubCurrentPageSignal": true,
     "FFlagAXAdaptiveScrollingSnapItemEditor": true,
@@ -9205,7 +9205,6 @@
     "FFlagFixMediaGalleryOversized": true,
     "FFlagLuaAppContentMaturityFromEgs2": true,
     "FFlagAppChatHideToastsU13_2": true,
-    "FFlagAXItemDetailsAnalyticsV2": true,
     "FFlagEnableCoreScriptRuntime": true,
     "DFFlagBanningEnabledProp": true,
     "FFlagUseAccumulationStepperForMouseWheelScrollPicker": true,
@@ -9373,6 +9372,7 @@
     "FFlagUseSkyReadyState": true,
     "FFlagFixAltKeyInputUWP": true,
     "FFlagClientToastNotificationsEnabled2": true,
+    "FFlagCapturesHotkeyEnabledForAll_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-07T17:54:25",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10025,16 +10025,19 @@
     "FFlagStoreEngineContextPtrInDataModel": true,
     "DFIntPCSCEVLaunchFeasibilityThrottleHundredthsPercent": 10000,
     "FFlagCevIdleTimeoutTelemetry": true,
-    "FFlagVideoEnableHardwareBufferRender3_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:16:09",
     "DFIntCevIdleTimeoutTelemetryThrottleHundredthsPercent": 10000,
-    "FFlagCEVFlowStart_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:06:45",
-    "FFlagCEVFlowStartPartyBegin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:07:27",
     "FFlagPCSCEVFeasibieAnalytics": true,
-    "FFlagDragDetectorRestartAfterPermissionChangeFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-06T22:28:25",
     "DFIntCEVLowMemoryWarningTelemetryThrottleHundredthsPercent": 10000,
     "FFlagCEVLowMemoryWarningAnalytics": true,
-    "FStringFlagRepoGitHashFastString": "d37f76f86554dca5634b2ae69818230b3841a513",
-    "DFStringFlagRepoGitHashDynamicString": "d37f76f86554dca5634b2ae69818230b3841a513",
-    "FStringFlipTimeStampFastString": "2025-01-06T22:56:49.320Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-06T22:56:49.320Z"
+    "FFlagCEVFlowStart": true,
+    "FFlagCEVFlowStartPartyBegin": true,
+    "FFlagVideoEnableHardwareBufferRender3": true,
+    "FFlagDragDetectorRestartAfterPermissionChangeFix": true,
+    "FFlagFixShowMusicFtuxTooltipWithoutConnect": true,
+    "FFlagVideoAndroidHardwareTurnOnModelFilter": true,
+    "FFlagAXNewItemGroupIncrementalHydration2": true,
+    "FStringFlagRepoGitHashFastString": "da94b769d0917e68f73e5adedd7fec67bf4da019",
+    "DFStringFlagRepoGitHashDynamicString": "da94b769d0917e68f73e5adedd7fec67bf4da019",
+    "FStringFlipTimeStampFastString": "2025-01-07T17:55:07.715Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-07T17:55:07.715Z"
 }
