--- a/PCClientBootstrapper.json
+++ b/PCClientBootstrapper.json
@@ -168,7 +168,7 @@
     "FFlagMacPersonalizedInstallerEnabled2": true,
     "FFlagWinPersonalizedInstallerEnabled2": true,
     "FIntWin78ClientDeprecationLevel": 2,
-    "FIntWin78ClientDeprecationMessageFrequencySeconds": 79200,
+    "FIntWin78ClientDeprecationMessageFrequencySeconds": 60,
     "FIntWin78DeprecationEpochTimestamp": 1736964000,
     "FFlagDeprecateWin78": true,
     "FFlagAbuseReportMenuConsoleSupportRefactor": true,
@@ -188,6 +188,7 @@
     "DFIntRobloxTelemetryThrottlingRenderFidelityOnTime": 100,
     "FFlagMacInstallerFixRemovingZip": true,
     "FFlagAXMigrateToRobloxTelemetryApi": true,
+    "FFlagWinInstallerCheckCRCBeforeUnzip": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "10-1",
@@ -202,8 +203,8 @@
     "InfluxHundredthsPercentage": 0,
     "InfluxInstallHundredthsPercentage": 10000,
     "ShowInstallSuccessPrompt": true,
-    "FStringFlagRepoGitHashFastString": "aeca7fa482962f70a215d032d88168311524e9ea",
-    "DFStringFlagRepoGitHashDynamicString": "aeca7fa482962f70a215d032d88168311524e9ea",
-    "FStringFlipTimeStampFastString": "2025-01-08T00:42:08.402Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-08T00:42:08.402Z"
+    "FStringFlagRepoGitHashFastString": "6f3a2177e8ebcdbb7fe33d8c1d483d29018721ef",
+    "DFStringFlagRepoGitHashDynamicString": "6f3a2177e8ebcdbb7fe33d8c1d483d29018721ef",
+    "FStringFlipTimeStampFastString": "2025-01-08T22:52:17.331Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-08T22:52:17.331Z"
 }
