--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -9705,7 +9705,6 @@
     "FFlagLuauReferenceAllocatorInNewSolver": true,
     "FFlagStudioActionComponentConversionGroupA": true,
     "FIntMusicFtuxShowDelayMs": 3000,
-    "FFlagFixWrapDeformerPublishingBlockingSavingInStudio_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-16T22:42:24",
     "DFFlagInitializeShowDomainAsTitle": true,
     "FFlagEnableGetHumanoidDescriptionFromUserIdThrottle_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-16T22:46:27",
     "DFFlagEnableFullScreenWebview": true,
@@ -9715,6 +9714,7 @@
     "FFlagGeometryBuffersTelemetry": true,
     "FLogStudioContext": "Info",
     "FIntMusicFtuxDismissDelayMs": 5000,
+    "FFlagFixWrapDeformerPublishingBlockingSavingInStudio": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
