--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -2103,7 +2103,6 @@
     "FFlagEnableScriptAnalysisCallbacks2": true,
     "FFlagExposeHintAndInformationSeverity": true,
     "DFIntInExpCreationEventsThrottleHundredthPercent": 10000,
-    "FFlagEnableLocationRecording": true,
     "FFlagLuauTransitiveSubtyping": true,
     "DFIntScriptVersionHistoryEventThrottleHundredthPercent": 10000,
     "FFlagScriptVersionHistoryTelemetry": true,
@@ -2144,7 +2143,6 @@
     "FFlagEnableLocalizedLocalizationToolsErrorsLua2": true,
     "FFlagDevConsoleCollisionPerfVisualization": true,
     "DFFlagFixJoinMismatchSkip": true,
-    "FFlagEnableLocationRecordingDeltaFiltering": true,
     "DFFlagServerProcessorSendPlaceId": true,
     "FFlagClearSelectionOnCompose": true,
     "FFlagIMESupportHighlight": false,
@@ -8540,7 +8538,7 @@
     "DFFlagAnalyticsServiceRelaxedPlayerCheckEnabled": true,
     "DFFlagRemovePerfTimer": true,
     "FFlagContactInvitesInProfilePlatformV2": true,
-    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512;10534865425",
+    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512",
     "DFFlagSimOptimizeSetSize_PlaceFilter": "true;15384815512;10534865425",
     "FFlagPluginCalloutBindToCloseCrash4": true,
     "DFFlagReportPartyVoiceActiveInCrashes": true,
@@ -9645,7 +9643,6 @@
     "FFlagStudioDeviceEmulatorMacHighDpiSupport": true,
     "FFlagRemovePSMLRobloxDocManager": true,
     "FFlagRoduxRemoveConnectTraceback": true,
-    "FFlagUseCanvasMaxSizeForNonGuiObjectToo2": true,
     "FFlagSongbirdWindowResponsiveSizing": true,
     "FFlagStudioOutputControllerBatchEvent": true,
     "FFlagRemovePSMLStudioDockPanelManager": true,
@@ -9723,18 +9720,57 @@
     "FFlagAnimationTrackPlayProcessessLoopedAndPriority2": true,
     "FFlagHighlightingEffectManagerPerf": true,
     "FFlagClientSideMigrationMetrics2": true,
-    "FFlagContentFeedPinchToZoomEnabled_v5_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:28:45",
-    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:37:25",
-    "FFlagSaveChatVisibilityUserSettings_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:41:55",
-    "FFlagRemoveClientToastNotificationDelay_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:46:23",
-    "AllowVideoPreRoll": true,
-    "FFlagExpChatEnableChannelTabsUIFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:05:52",
-    "FFlagDevFrameworkTextLabelTruncateTag_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:06:09",
     "FFlagStudioFloatingRibbon2": true,
     "FFlagAddFieldsContainerResizeFields": true,
     "FFlagUserRespectLegacyCameraOptions_PlaceFilter": "false;3226555017",
-    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Revert;2025-01-21T18:12:24",
+    "FFlagContentFeedPinchToZoomEnabled_v5": true,
+    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData": true,
+    "FFlagSaveChatVisibilityUserSettings": true,
+    "FFlagRemoveClientToastNotificationDelay": true,
+    "FFlagEditableAPIRobloxScriptCreateInternal": true,
+    "FFlagExpChatEnableChannelTabsUIFix": false,
+    "FFlagDevFrameworkTextLabelTruncateTag": true,
+    "FFlagAllowTemporaryIdEditDMOnly": true,
+    "DFFlagShowPluginRunContextInStudio": true,
+    "FFlagSeeResellersForAnyCollectible": true,
+    "FFlagFixDisableTopPaddingError": true,
+    "FFlagCLI128688": true,
+    "FFlagAXRemoveModalPromptsNavigator": true,
+    "FFlagUnifiedLightingBetaFeature": true,
+    "FFlagContactImporterUIRefactor_v1": true,
+    "DFFlagRefactorStartUGCValidationFlow": true,
+    "FFlagFasterLayoutProcessingWhenNoPerfMetrics": true,
+    "DFFlagPlayStationLimitCommunicationRestrictionStatusDialog1": true,
+    "DFFlagSimClearNetworkPhysicsDataForAssembly": true,
+    "FFlagAXDisableBundleTrade": true,
+    "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
+    "FFlagFCUpdateNormalsOnlyForLCs": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagRemoveUnusedAccountInfoRequest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:06:13",
+    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:08:38",
+    "FFlagEnablePlatformSocialGraphSync1": true,
     "AxisAdornmentGrabSize": 12,
+    "FFlagAXShareAvatarPromptEasyDismiss_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:23:04",
+    "AllowVideoPreRoll": true,
+    "FFlagInExperienceMenuCanvasGroupsInvisible": true,
+    "FFlagAXEnableItemOwnershipPageResellableFix": true,
+    "FFlagAXEnableSelectItemPromptRefactor": true,
+    "FFlagAXEnableItemOwnershipPageSerialFix": true,
+    "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
+    "FFlagRemovePSMListenerForDialog": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
+    "FFlagEnableLocationRecording_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
+    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
+    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
+    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
+    "FFlagAXFixFloatingAvatar": true,
+    "FFlagAutoSetupMissingDynamicHeadAllowed": true,
+    "FFlagAvatarPreviewerBetterUI2": true,
+    "FFlagAvatarPreviewerFixCustomShoesTeamCreate": true,
+    "FFlagAvatarPreviewerSafeCharaterEncoding": true,
+    "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
+    "FFlagHumanoidModelScalingFix": true,
+    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T23:08:49",
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
@@ -10653,20 +10689,15 @@
     "FFlagStudioToolboxMinSize": true,
     "FFlagStudio3dViewFocusOnCreateConstraint2": true,
     "FFlagSaveClientSettingsCacheOptimization": true,
-    "FFlagAvatarPreviewerBetterUI2": true,
     "FFlagLuauRetrySubtypingWithoutHiddenPack": true,
     "FFlagLuauTypestateBuiltins2": true,
     "FFlagScriptEditorFollowTypeForDocumentation": true,
     "FFlagAudioEchoInterpolatesDelay": true,
     "FFlagLuauNewSolverVisitErrorExprLvalues": true,
     "FFlagDevFrameworkAlertWrapping": true,
-    "FFlagHumanoidModelScalingFix": true,
-    "FFlagAvatarPreviewerFixCustomShoesTeamCreate": true,
-    "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
     "FFlagFFlagAutoSetupMissingDynamicHeadAllowed": true,
     "FFlagNoHashingScalingValues": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAutoSetupMissingDynamicHeadAllowed": true,
     "FFlagAvatarPreviewerUseAnyModel5": true,
     "FFlagCSG4StudioBetaFeature": true,
     "FStringScriptSyncM2_5BetaFeatureUrl": "https://devforum.roblox.com/t/early-preview-studio-script-sync/3257548",
@@ -10769,7 +10800,6 @@
     "FFlagEnableCreateAssetAsyncModelUpload": true,
     "FFlagEnableCreateAssetAsyncPluginUpload": true,
     "DFIntStudioMemoryTelemetryPercent": 200,
-    "FFlagEditableAPIRobloxScriptCreateInternal": true,
     "FFlagAddGameSessionIdToCDNRequests": true,
     "FFlagOnlyEnableJoinVoiceInVoiceEnabledUniversesV2": true,
     "FFlagExtendClearTimer": true,
@@ -10782,7 +10812,6 @@
     "FFlagFixParseProxyWrap": true,
     "FFlagTerrainEditorNoActivate": true,
     "FFlagStudioContextExpressionTypes3": true,
-    "FFlagAllowTemporaryIdEditDMOnly": true,
     "FFlagCOLLAB6176PlaceAnnotationsStudio2": true,
     "FStringSaveOptimizationDocsLinkString": "https://create.roblox.com/docs/projects/place-files",
     "FFlagSpeedUpScriptRegistrationService": true,
@@ -10801,7 +10830,6 @@
     "FFlagCollab6803TelemetryFix": true,
     "FFlagStartPageUseIdFStrings": true,
     "FFlagToolboxCreatorContextThumbnail": true,
-    "FFlagAvatarPreviewerSafeCharaterEncoding": true,
     "FFlagAssetPreviewThumbnailContext": true,
     "FFlagMeshLoDSendTimeToServeMesh2": true,
     "FFlagLuaStartPageAddingRecentsPage2": true,
@@ -10859,6 +10887,13 @@
     "FFlagInsertToCursorForNonTextEditACItem": true,
     "FFlagAXFixMySharedAvatarMutedError": true,
     "FFlagLuaExplorerPackages": true,
+    "FFlagDevFrameworkPopupFixedTitle": true,
+    "FFlagStudioAddMaterialPickerNewRibbon": true,
+    "FFlagLuaStartPageTour3BannerLayoutFix": true,
+    "FFlagTutorialsFixTour3WedgeStep": true,
+    "FFlagGetWidgetLuau_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:43:18",
+    "DFFlagSetNoCollisionConstraintEnabledWakeUp_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:50:09",
+    "FFlagStartPageTemplatesAlwaysGrid_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:59:52",
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -11001,7 +11036,6 @@
     "DFFlagDataSenderEmptyTrackBeforeRun": true,
     "FFlagAXActionBarShareIconAlignment1": true,
     "FFlagRoduxPerfTrackerFixStopTracking": true,
-    "FFlagFasterLayoutProcessingWhenNoPerfMetrics": true,
     "FFlagVideoReportMaxActiveVideoFrames": true,
     "FFlagFlagRolloutTestStaticBool13": false,
     "DFFlagFlagRolloutTestDynamicBool0": false,
@@ -11017,8 +11051,12 @@
     "FFlagAXUseNewItemGroupWidgetComponent2": true,
     "FFlagCapturesOpenInVideos": true,
     "FFlagSaveVideoCapturesToVideosFolder": true,
-    "FFlagImproveMicroprofilerReadability_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:18:21",
     "DFFlagPreemptCrashpadExceptionHandlerOnWindows": true,
+    "FFlagImproveMicroprofilerReadability": true,
+    "DFFlagVisBugFixCylinderSpecialMeshScale_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:52:16",
+    "DFFlagVisBugFixVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:20",
+    "DFFlagVisBugFixBlockTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:57",
+    "DFFlagOptimizePropertyGetSet": true,
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -11042,8 +11080,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "DFStringFlagRepoGitHashDynamicString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "FStringFlipTimeStampFastString": "2025-01-21T18:13:14.523Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T18:13:14.523Z"
+    "FStringFlagRepoGitHashFastString": "cc9276b7ebdb42f8a75878389b7718a0fc005cb7",
+    "DFStringFlagRepoGitHashDynamicString": "cc9276b7ebdb42f8a75878389b7718a0fc005cb7",
+    "FStringFlipTimeStampFastString": "2025-01-21T23:10:45.758Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:10:45.758Z"
 }
