--- a/iOSApp.json
+++ b/iOSApp.json
@@ -2103,7 +2103,6 @@
     "FFlagEnableScriptAnalysisCallbacks2": true,
     "FFlagExposeHintAndInformationSeverity": true,
     "DFIntInExpCreationEventsThrottleHundredthPercent": 10000,
-    "FFlagEnableLocationRecording": false,
     "FFlagLuauTransitiveSubtyping": true,
     "DFIntScriptVersionHistoryEventThrottleHundredthPercent": 10000,
     "FFlagScriptVersionHistoryTelemetry": true,
@@ -2144,7 +2143,6 @@
     "FFlagEnableLocalizedLocalizationToolsErrorsLua2": true,
     "FFlagDevConsoleCollisionPerfVisualization": true,
     "DFFlagFixJoinMismatchSkip": true,
-    "FFlagEnableLocationRecordingDeltaFiltering": true,
     "DFFlagServerProcessorSendPlaceId": true,
     "FFlagClearSelectionOnCompose": true,
     "FFlagIMESupportHighlight": false,
@@ -8540,7 +8538,7 @@
     "DFFlagAnalyticsServiceRelaxedPlayerCheckEnabled": true,
     "DFFlagRemovePerfTimer": true,
     "FFlagContactInvitesInProfilePlatformV2": true,
-    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512;10534865425",
+    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512",
     "DFFlagSimOptimizeSetSize_PlaceFilter": "true;15384815512;10534865425",
     "FFlagPluginCalloutBindToCloseCrash4": true,
     "DFFlagReportPartyVoiceActiveInCrashes": true,
@@ -8716,7 +8714,7 @@
     "FFlagRbxStorageSkipOldCacheSize": true,
     "FFlagStudioDockingDisableCorruptionChecks": true,
     "DFFlagSessionTrackingAddAndroidSocAndSku": true,
-    "FFlagNavigationUseBuildImprovedRegions4": false,
+    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagPathfindingSupportPartialPath4": false,
     "FFlagPathfindingUseImprovedSearch4": false,
     "FFlagLegacyFindReplaceUsageTelemetry": true,
@@ -9645,7 +9643,6 @@
     "FFlagStudioDeviceEmulatorMacHighDpiSupport": true,
     "FFlagRemovePSMLRobloxDocManager": true,
     "FFlagRoduxRemoveConnectTraceback": true,
-    "FFlagUseCanvasMaxSizeForNonGuiObjectToo2": true,
     "FFlagSongbirdWindowResponsiveSizing": true,
     "FFlagStudioOutputControllerBatchEvent": true,
     "FFlagRemovePSMLStudioDockPanelManager": true,
@@ -9723,19 +9720,56 @@
     "FFlagAnimationTrackPlayProcessessLoopedAndPriority2": true,
     "FFlagHighlightingEffectManagerPerf": true,
     "FFlagClientSideMigrationMetrics2": true,
-    "AllowVideoPreRoll": true,
-    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:37:25",
-    "FFlagSaveChatVisibilityUserSettings_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:41:55",
-    "FFlagRemoveClientToastNotificationDelay_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:46:23",
-    "FFlagEditableAPIRobloxScriptCreateInternal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:58:42",
-    "FFlagExpChatEnableChannelTabsUIFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:05:52",
-    "FFlagDevFrameworkTextLabelTruncateTag_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:06:09",
     "FFlagStudioFloatingRibbon2": true,
     "FFlagAddFieldsContainerResizeFields": true,
     "FFlagUserRespectLegacyCameraOptions_PlaceFilter": "false;3226555017",
-    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Revert;2025-01-21T18:12:24",
+    "FFlagContentFeedPinchToZoomEnabled_v5": true,
+    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData": true,
+    "FFlagSaveChatVisibilityUserSettings": true,
+    "FFlagRemoveClientToastNotificationDelay": true,
+    "FFlagEditableAPIRobloxScriptCreateInternal": true,
+    "FFlagExpChatEnableChannelTabsUIFix": false,
+    "FFlagDevFrameworkTextLabelTruncateTag": true,
+    "FFlagAllowTemporaryIdEditDMOnly": true,
+    "DFFlagShowPluginRunContextInStudio": true,
+    "FFlagSeeResellersForAnyCollectible": true,
+    "FFlagFixDisableTopPaddingError": true,
+    "FFlagCLI128688": true,
+    "FFlagAXRemoveModalPromptsNavigator": true,
+    "FFlagUnifiedLightingBetaFeature": true,
+    "FFlagContactImporterUIRefactor_v1": true,
+    "DFFlagRefactorStartUGCValidationFlow": true,
+    "FFlagFasterLayoutProcessingWhenNoPerfMetrics": true,
+    "DFFlagPlayStationLimitCommunicationRestrictionStatusDialog1": true,
+    "DFFlagSimClearNetworkPhysicsDataForAssembly": true,
+    "FFlagAXDisableBundleTrade": true,
+    "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
+    "FFlagFCUpdateNormalsOnlyForLCs": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagRemoveUnusedAccountInfoRequest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:06:13",
+    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:08:38",
+    "FFlagEnablePlatformSocialGraphSync1": true,
+    "FFlagPathfindingUseImprovedSearch4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:18:13",
     "AxisAdornmentGrabSize": 12,
+    "AllowVideoPreRoll": true,
+    "FFlagInExperienceMenuCanvasGroupsInvisible": true,
+    "FFlagAXEnableItemOwnershipPageResellableFix": true,
+    "FFlagAXEnableSelectItemPromptRefactor": true,
+    "FFlagAXEnableItemOwnershipPageSerialFix": true,
+    "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
+    "FFlagRemovePSMListenerForDialog": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
     "CaptureCountersIntervalInMinutes": 5,
+    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
+    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
+    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
+    "FFlagAXFixFloatingAvatar": true,
+    "FFlagAutoSetupMissingDynamicHeadAllowed": true,
+    "FFlagAvatarPreviewerBetterUI2": true,
+    "FFlagAvatarPreviewerFixCustomShoesTeamCreate": true,
+    "FFlagAvatarPreviewerSafeCharaterEncoding": true,
+    "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
+    "FFlagHumanoidModelScalingFix": true,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
     "DFFlagEnableRemoteProfiling": true,
@@ -9948,6 +9982,7 @@
     "FFlagTrackDeeplinkLaunchFlow": true,
     "FLogDataModelPatchAnalytics": 6,
     "FStringCustomizeNameModalOpened": "CustomizeNameModalOpenediOS",
+    "FFlagEnableLocationRecording": false,
     "FStringCapturesActivatedInGameMenu": "CapturesActivatedInGameMenuiOS",
     "FStringCapturesCarouselOpened": "CapturesCarouselOpenediOS",
     "FStringCapturesDeactivatedInGameMenu": "CapturesDeactivatedInGameMenuiOS",
@@ -10033,7 +10068,6 @@
     "FIntRuntimeMaxNumOfConditions": 2400,
     "FIntRuntimeMaxNumOfMutexes": 2400,
     "FFlagEnableSignupBirthdayExperimentsRelease3": true,
-    "FFlagContactImporterUIRefactor_v1": true,
     "FFlagAXFixBuyActionBarLoadingHeight1": true,
     "FFlagAXAdaptiveScrollingImprovementIXPEnabled": true,
     "FFlagAXPortraitSplitAdaptiveScrollingFix2": true,
@@ -10368,16 +10402,14 @@
     "FFlagHttpRbxStorageInitOnly5": true,
     "FFlagAXCarouselCanvasWidthFix": true,
     "FFlagAXUseNewItemGroupWidgetComponent2": true,
-    "FFlagContentFeedPinchToZoomEnabled_v5": true,
     "FFlagAXNewItemGroupAllowExpandedStateThroughProp": true,
     "FFlagMicroprofileGameSettingsFix": true,
-    "FFlagFasterLayoutProcessingWhenNoPerfMetrics": true,
     "FFlagLuaAppFixOmniFeedRefreshEffect": true,
     "FFlagLuaAppRewriteTokenRefresh": true,
     "FFlagReshufflePartyIconsInUnibar": true,
     "FFlagAXFixMySharedAvatarMutedError": true,
-    "FStringFlagRepoGitHashFastString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "DFStringFlagRepoGitHashDynamicString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "FStringFlipTimeStampFastString": "2025-01-21T18:13:14.523Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T18:13:14.523Z"
+    "FStringFlagRepoGitHashFastString": "6a72ccff755ff295b4b63e02c2d6f05023f971e7",
+    "DFStringFlagRepoGitHashDynamicString": "6a72ccff755ff295b4b63e02c2d6f05023f971e7",
+    "FStringFlipTimeStampFastString": "2025-01-21T23:07:18.348Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:07:18.348Z"
 }
