--- a/UWPApp.json
+++ b/UWPApp.json
@@ -2103,7 +2103,6 @@
     "FFlagEnableScriptAnalysisCallbacks2": true,
     "FFlagExposeHintAndInformationSeverity": true,
     "DFIntInExpCreationEventsThrottleHundredthPercent": 10000,
-    "FFlagEnableLocationRecording": true,
     "FFlagLuauTransitiveSubtyping": true,
     "DFIntScriptVersionHistoryEventThrottleHundredthPercent": 10000,
     "FFlagScriptVersionHistoryTelemetry": true,
@@ -2144,7 +2143,6 @@
     "FFlagEnableLocalizedLocalizationToolsErrorsLua2": true,
     "FFlagDevConsoleCollisionPerfVisualization": true,
     "DFFlagFixJoinMismatchSkip": true,
-    "FFlagEnableLocationRecordingDeltaFiltering": true,
     "DFFlagServerProcessorSendPlaceId": true,
     "FFlagClearSelectionOnCompose": true,
     "FFlagIMESupportHighlight": false,
@@ -8540,7 +8538,7 @@
     "DFFlagAnalyticsServiceRelaxedPlayerCheckEnabled": true,
     "DFFlagRemovePerfTimer": true,
     "FFlagContactInvitesInProfilePlatformV2": true,
-    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512;10534865425",
+    "DFFlagSimOptimizeGeometryChangedAssemblies2_PlaceFilter": "true;15384815512",
     "DFFlagSimOptimizeSetSize_PlaceFilter": "true;15384815512;10534865425",
     "FFlagPluginCalloutBindToCloseCrash4": true,
     "DFFlagReportPartyVoiceActiveInCrashes": true,
@@ -8716,7 +8714,7 @@
     "FFlagRbxStorageSkipOldCacheSize": true,
     "FFlagStudioDockingDisableCorruptionChecks": true,
     "DFFlagSessionTrackingAddAndroidSocAndSku": true,
-    "FFlagNavigationUseBuildImprovedRegions4": false,
+    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagPathfindingSupportPartialPath4": false,
     "FFlagPathfindingUseImprovedSearch4": false,
     "FFlagLegacyFindReplaceUsageTelemetry": true,
@@ -9645,7 +9643,6 @@
     "FFlagStudioDeviceEmulatorMacHighDpiSupport": true,
     "FFlagRemovePSMLRobloxDocManager": true,
     "FFlagRoduxRemoveConnectTraceback": true,
-    "FFlagUseCanvasMaxSizeForNonGuiObjectToo2": true,
     "FFlagSongbirdWindowResponsiveSizing": true,
     "FFlagStudioOutputControllerBatchEvent": true,
     "FFlagRemovePSMLStudioDockPanelManager": true,
@@ -9723,17 +9720,57 @@
     "FFlagAnimationTrackPlayProcessessLoopedAndPriority2": true,
     "FFlagHighlightingEffectManagerPerf": true,
     "FFlagClientSideMigrationMetrics2": true,
-    "FFlagContentFeedPinchToZoomEnabled_v5_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:28:45",
-    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:37:25",
-    "FFlagSaveChatVisibilityUserSettings_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:41:55",
-    "FFlagRemoveClientToastNotificationDelay_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:46:23",
-    "FFlagEditableAPIRobloxScriptCreateInternal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T17:58:42",
-    "FFlagExpChatEnableChannelTabsUIFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:05:52",
-    "FFlagDevFrameworkTextLabelTruncateTag_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T18:06:09",
     "FFlagStudioFloatingRibbon2": true,
     "FFlagAddFieldsContainerResizeFields": true,
     "FFlagUserRespectLegacyCameraOptions_PlaceFilter": "false;3226555017",
-    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Revert;2025-01-21T18:12:24",
+    "FFlagContentFeedPinchToZoomEnabled_v5": true,
+    "FFlagThirdPartyTextChatFixSyncPlatformAppStorageData": true,
+    "FFlagSaveChatVisibilityUserSettings": true,
+    "FFlagRemoveClientToastNotificationDelay": true,
+    "FFlagEditableAPIRobloxScriptCreateInternal": true,
+    "FFlagExpChatEnableChannelTabsUIFix": false,
+    "FFlagDevFrameworkTextLabelTruncateTag": true,
+    "FFlagAllowTemporaryIdEditDMOnly": true,
+    "DFFlagShowPluginRunContextInStudio": true,
+    "FFlagSeeResellersForAnyCollectible": true,
+    "FFlagFixDisableTopPaddingError": true,
+    "FFlagCLI128688": true,
+    "FFlagAXRemoveModalPromptsNavigator": true,
+    "FFlagUnifiedLightingBetaFeature": true,
+    "FFlagContactImporterUIRefactor_v1": true,
+    "DFFlagRefactorStartUGCValidationFlow": true,
+    "FFlagFasterLayoutProcessingWhenNoPerfMetrics": true,
+    "DFFlagPlayStationLimitCommunicationRestrictionStatusDialog1": true,
+    "DFFlagSimClearNetworkPhysicsDataForAssembly": true,
+    "FFlagAXDisableBundleTrade": true,
+    "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
+    "FFlagFCUpdateNormalsOnlyForLCs": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagEnablePlatformSocialGraphSync1": true,
+    "FFlagPathfindingUseImprovedSearch4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:18:13",
+    "FFlagAXShareAvatarPromptEasyDismiss_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:23:04",
+    "FFlagLuaAppFixOmniFeedRefreshEffect_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:24:43",
+    "FFlagInExperienceMenuCanvasGroupsInvisible": true,
+    "FFlagAXEnableItemOwnershipPageResellableFix": true,
+    "FFlagAXEnableSelectItemPromptRefactor": true,
+    "FFlagAXEnableItemOwnershipPageSerialFix": true,
+    "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
+    "FFlagRemovePSMListenerForDialog": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
+    "FFlagEnableLocationRecording_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
+    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
+    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
+    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
+    "FFlagAXFixFloatingAvatar": true,
+    "FFlagAutoSetupMissingDynamicHeadAllowed": true,
+    "FFlagAvatarPreviewerBetterUI2": true,
+    "FFlagAvatarPreviewerFixCustomShoesTeamCreate": true,
+    "FFlagAvatarPreviewerSafeCharaterEncoding": true,
+    "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
+    "FFlagHumanoidModelScalingFix": true,
+    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T23:08:49",
+    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps": true,
+    "FFlagRemoveUnusedAccountInfoRequest": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9952,8 +9989,8 @@
     "DFFlagFlagRolloutTestDynamicBool3": true,
     "FFlagUwpMarshalStoreErrors": true,
     "DFFlagPreemptCrashpadExceptionHandlerOnWindows": true,
-    "FStringFlagRepoGitHashFastString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "DFStringFlagRepoGitHashDynamicString": "63e15e079ce24e125f073e5df5e46929f25c52fd",
-    "FStringFlipTimeStampFastString": "2025-01-21T18:13:14.523Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T18:13:14.523Z"
+    "FStringFlagRepoGitHashFastString": "57b31d59da9d723bc0fe97fbd497bb5e765627a6",
+    "DFStringFlagRepoGitHashDynamicString": "57b31d59da9d723bc0fe97fbd497bb5e765627a6",
+    "FStringFlipTimeStampFastString": "2025-01-21T23:15:56.306Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:15:56.306Z"
 }
